--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChekInCompose"
         tools:targetApi="31">
-        <activity
+        <!--<activity
             android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ChekInCompose">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>-->
+
+        <activity
+            android:name=".features.lesson_2.Lesson2Activity"
             android:exported="true"
             android:theme="@style/Theme.ChekInCompose">
             <intent-filter>
@@ -27,8 +38,8 @@
         <activity
             android:name=".features.lesson_1.Lesson1Activity"
             android:screenOrientation="fullSensor" />
-        <activity
+        <!--<activity
             android:name=".features.lesson_2.Lesson2Activity"
-            android:screenOrientation="fullSensor" />
+            android:screenOrientation="fullSensor" />-->
     </application>
 </manifest>
